fixed wrapper error in contact form on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -516,7 +516,8 @@ footer {
 .proniaForm { 
    min-height: 300px;
    display: flex;
-   margin: 10vh 25vw 10vh 25vw;
+   margin-top: 5vh;
+   margin-bottom: 5vh;
    border: solid 2px $lightGreyColour;
    font-size: 10px;
    box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.1);
@@ -703,17 +704,11 @@ footer {
       display: flex; 
       justify-content: center;
       align-items: center;
-      .proniaForm { 
-         margin-top: 40px;
-         margin-right: 10px;
-         margin-left: 10px;
-         margin-bottom: 40px; 
+       .proniaForm { 
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
-         margin: 0;
-         min-width: 70vw;
          .formInstructions { 
             flex-direction: column;
             justify-content: center;
